--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <div id="loader">
           <p class="text-center">Loading...</p>
         </div>
-        <div id="content" class="text-center" style="display: none;">
+        <div id="content" class="text-center" style="display:none;">
           <p>
             Introducing "DApp Token" (DAPP)!
             Token price is <span class="token-price"></span> Ether. You currently have <span class="dapp-balance"></span>&nbsp;DAPP.
@@ -28,10 +28,21 @@
           <form role="form">
             <div class="form-group">
               <div class="input-group">
-                <input id="numberOfToken" type="number">
+                <input id="numberOfToken" type="number" class="form-control input-lg" name="number" value="1" min="1" pattern="[0-9]" />
+                <span class="input-group-btn">
+                  <button type="submit" class="btn btn-primary btn-lg">Buy tokens</button>
+                </span>  
               </div>
             </div>
           </form>
+          <br />
+            <div class="progress">
+              <div id="progress" class="progress-bar progress-bar-striped active" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+            <p><span class="tokens-sold"></span> / <span class="tokens-available"></span> tokens sold</p>
+            <hr>
+            <p id="accountAddress"></p>
         </div>
       </div>
     </div>
