--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <div id="loader">
           <p class="text-center">Loading...</p>
         </div>
-        <div id="content" class="text-center" style="display:none;">
+        <div id="content" class="text-center" style="display:">
           <p>
             Introducing "DApp Token" (DAPP)!
             Token price is <span class="token-price"></span> Ether. You currently have <span class="dapp-balance"></span>&nbsp;DAPP.
