--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             Token price is <span class="token-price"></span> Ether. You currently have <span class="dapp-balance"></span>&nbsp;DAPP.
           </p>
           <br/>
-          <form role="form">
+          <form onSubmit ='App.buyTokens(); return false;'  role="form">
             <div class="form-group">
               <div class="input-group">
                 <input id="numberOfToken" type="number" class="form-control input-lg" name="number" value="1" min="1" pattern="[0-9]" />
